--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "watch": "cross-env tsc --watch",
     "test": "cross-env jest",
     "seed": "cross-env medusa seed -f ./data/seed.json",
-    "start": "cross-env npm run build && medusa start",
-    "start:custom": "cross-env npm run build && node --preserve-symlinks --trace-warnings index.js",
+    "start": "cross-env npm run build && node --max-old-space-size=4096 index.js",
+    "start:custom": "cross-env npm run build && node --max-old-space-size=4096 --preserve-symlinks --trace-warnings index.js",
     "dev": "cross-env npm run build:server && medusa develop"
   },
   "dependencies": {
@@ -41,6 +41,7 @@
     "medusa-fulfillment-manual": "1.1.41",
     "medusa-interfaces": "1.3.10",
     "medusa-payment-manual": "1.0.25",
+    "medusa-payment-paytm": "^1.0.0",
     "medusa-payment-stripe": "6.0.11",
     "prism-react-renderer": "^2.0.4",
     "typeorm": "0.3.16",
