--- a/package.json
+++ b/package.json
@@ -14,15 +14,18 @@
   ],
   "scripts": {
     "clean": "cross-env ./node_modules/.bin/rimraf dist",
-    "build": "cross-env npm run clean && npm run build:server && npm run build:admin",
     "build:server": "cross-env npm run clean && tsc -p tsconfig.server.json",
     "build:admin": "medusa-admin build --deployment",
     "watch": "cross-env tsc --watch",
     "test": "cross-env jest",
     "seed": "cross-env medusa seed -f ./data/seed.json",
-    "start": "cross-env npm run build && node --max-old-space-size=4096 index.js",
+    "start": "medusa start",
+    "build": "npm run build:server && npm run build:admin",
     "start:custom": "cross-env npm run build && node --max-old-space-size=4096 --preserve-symlinks --trace-warnings index.js",
     "dev": "cross-env npm run build:server && medusa develop"
+  },
+  "engines": {
+    "node": ">=16 <17"
   },
   "dependencies": {
     "@medusajs/admin": "^7.1.16",
@@ -31,7 +34,7 @@
     "@medusajs/event-bus-local": "1.9.9",
     "@medusajs/event-bus-redis": "^1.8.14",
     "@medusajs/file-local": "1.0.4",
-    "@medusajs/medusa": "^1.20.9",
+    "@medusajs/medusa": "1.20.9",
     "@rsc-labs/medusa-documents": "^0.8.4",
     "@tanstack/react-query": "4.22.0",
     "body-parser": "^1.19.0",
@@ -49,7 +52,7 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.14.3",
-    "@babel/core": "^7.14.3",
+    "@babel/core": "^7.23.2",
     "@babel/preset-typescript": "^7.21.4",
     "@medusajs/medusa-cli": "1.3.23",
     "@stdlib/number-float64-base-normalize": "0.0.8",
